hide_hl/res/ui/style/hui-file-picker.less
hui-file-picker {
	min-height: @widget-base-height;
	min-width: @widget-base-height;
	fill-width: true;
	cursor: button;
	padding: 0 3 0 3;
	//overflow: hidden;

	> hui-text {
		valign: middle;
		margin-bottom: 2;
	}

	background-type: hui;
	> hui-background {
		background: @widget-bg;
		border-radius: @base-corner-radius;
		outline: 1 @widget-border;
	}

	&:hover {
		> hui-background {
			background: @color-over;
		}
	}

	&.unset {
		> hui-text {
			halign: middle;
		}
	}
}

